--- a/pom.xml
+++ b/pom.xml
@@ -60,10 +60,13 @@
       <artifactId>test-framework</artifactId>
       <version>10.49.12</version>
       <scope>test</scope>
+      <exclusions>
+        <exclusion><groupId>com.sun</groupId>
+          <artifactId>tools</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
-
-    <!-- https://mvnrepository.com/artifact/ma.glasnost.orika/orika-core -->
     <dependency>
       <groupId>ma.glasnost.orika</groupId>
       <artifactId>orika-core</artifactId>
