Added healthcheck functionality

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,3 +39,9 @@ logging:
         type:
           descriptor:
             sql: trace
+
+endpoints:
+  enabled: true
+  info:
+    enabled: true
+    sensitive: false
