--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,18 @@
       <version>1.5.4</version>
     </dependency>
 
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger2</artifactId>
+      <version>2.9.2</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger-ui</artifactId>
+      <version>2.9.2</version>
+    </dependency>
+
     <!--    Test Dependencies below this point -->
     <dependency>
       <groupId>junit</groupId>
