Changes for showcase

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,6 @@ services:
 language: java
 jdk: oraclejdk11
 
-env:
-  global:
-    - IMAGE_NAME="$DOCKER_GCP_LOCATION/census-rm-case-api"
-
 before_install:
   - mvn fmt:check
   - docker login -u "${DOCKER_GCP_USERNAME}" -p "${DOCKER_GCP_PASSWORD}" "${DOCKER_GCP_REGISTRY}";
@@ -19,7 +15,12 @@ script: travis_wait mvn verify jacoco:report
 after_success:
   - if [ "$TRAVIS_BRANCH" == "master" ] && [ "$TRAVIS_PULL_REQUEST" == "false" ]; then
     docker login -u "${DOCKER_GCP_USERNAME}" -p "${DOCKER_GCP_PASSWORD}" "${DOCKER_GCP_REGISTRY}";
-    docker push "$IMAGE_NAME";
+    docker push "eu.gcr.io/census-rm-ci/rm/census-rm-case-api";
+    fi
+  - if [ "$TRAVIS_BRANCH" == "contact-centre-case-lookup" ] ; then
+    docker login -u "${DOCKER_GCP_USERNAME}" -p "${DOCKER_GCP_PASSWORD}" "${DOCKER_GCP_REGISTRY}";
+    docker tag "eu.gcr.io/census-rm-ci/rm/census-rm-case-api" "eu.gcr.io/census-rm-ci/rm/census-rm-case-api:ade_test";
+    docker push "eu.gcr.io/census-rm-ci/rm/census-rm-case-api:ade_test";
     fi
   - bash <(curl -s https://codecov.io/bash)
 
@@ -30,3 +31,4 @@ cache:
 branches:
   only:
     - master
+    - contact-centre-case-lookup
