--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ language: java
 jdk: oraclejdk11
 
 before_install:
+  - cp .maven.settings.xml $HOME/.m2/settings.xml
   - mvn fmt:check
   - docker login -u "${DOCKER_GCP_USERNAME}" -p "${DOCKER_GCP_PASSWORD}" "${DOCKER_GCP_REGISTRY}";
 
