--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,6 @@ info:
 spring:
   autoconfigure:
     exclude: org.springframework.boot.autoconfigure.amqp.RabbitAutoConfiguration
-
   datasource:
     url: jdbc:postgresql://localhost:6432/postgres
     username: postgres
@@ -29,16 +28,10 @@ spring:
         jdbc:
           lob:
             non_contextual_creation: true
-            format_sql: true
 
 logging:
   level:
-    org:
-      hibernate:
-        SQL: debug
-        type:
-          descriptor:
-            sql: trace
+    ROOT: INFO
 
 endpoints:
   enabled: true
