--- a/src/test/resources/docker-compose.yml
+++ b/src/test/resources/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2.1'
 services:
  postgres:
-  container_name: postgres-action-it
+  container_name: postgres-case-api-it
   image: sdcplatform/ras-rm-docker-postgres
   ports:
    - "16432:5432"
