--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -15,7 +15,7 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQL94Dialect
     hibernate:
-      ddl-auto: create
+      ddl-auto: validate
     properties:
       hibernate:
         default_schema: casev2
