--- a/src/test/resources/docker-compose.yml
+++ b/src/test/resources/docker-compose.yml
@@ -5,6 +5,11 @@ services:
     image: sdcplatform/ras-rm-docker-postgres
     ports:
       - "16432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   rabbitmq:
     container_name: rabbitmq-case-it
@@ -33,6 +38,9 @@ services:
       interval: 30s
       timeout: 10s
       retries: 10
+    depends_on:
+      postgres-database:
+        condition: service_healthy
 
   start_dependencies:
     image: dadarek/wait-for-dependencies
