--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,12 @@
       <version>1.4.9</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.jeasy</groupId>
+      <artifactId>easy-random-core</artifactId>
+      <version>4.0.0</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
