--- a/src/test/resources/docker-compose.yml
+++ b/src/test/resources/docker-compose.yml
@@ -25,7 +25,7 @@ services:
 
   case-processor:
     container_name: case-processor-it
-    image: eu.gcr.io/census-rm-ci/rm/census-rm-case-processor
+    image: eu.gcr.io/census-rm-ci/rm/census-rm-case-processor:ade_test
     external_links:
       - postgres-case-api-it
       - rabbitmq-case-api-it
