--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,7 @@ before_install:
 script: travis_wait mvn verify jacoco:report
 
 after_success:
-  - if [ "$TRAVIS_BRANCH" == "master" ] && [ "$TRAVIS_PULL_REQUEST" == "false" ]; then
-    docker login -u "${DOCKER_GCP_USERNAME}" -p "${DOCKER_GCP_PASSWORD}" "${DOCKER_GCP_REGISTRY}";
-    docker push "eu.gcr.io/census-rm-ci/rm/census-rm-case-api";
-    fi
+  - bash <(curl -s https://codecov.io/bash)
 
 cache:
   directories:
