--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
       <artifactId>orika-core</artifactId>
       <version>1.5.4</version>
     </dependency>
+    <dependency>
+      <groupId>com.vladmihalcea</groupId>
+      <artifactId>hibernate-types-5</artifactId>
+      <version>2.4.4</version>
+    </dependency>
 
     <!--    Test Dependencies below this point -->
     <dependency>
