Add create UAC/QID Pair endpoint.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,3 +36,9 @@ management:
   endpoint:
     info:
       enabled: true
+
+uacservice:
+  connection:
+    scheme: http
+    host: localhost
+    port: 8164
