--- a/src/test/resources/docker-compose.yml
+++ b/src/test/resources/docker-compose.yml
@@ -43,8 +43,26 @@ services:
       postgres-database:
         condition: service_healthy
 
+  uac-qid:
+    container_name: uac-qid-case-api-it
+    image: eu.gcr.io/census-rm-ci/rm/census-rm-uac-qid-service
+    ports:
+      - "18164:8164"
+    external_links:
+      - postgres-case-api-it
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres-case-api-it:5432/postgres?sslmode=disable
+      - SPRING_PROFILES_ACTIVE=dev
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8164/actuator/info"]
+      interval: 30s
+      timeout: 10s
+      retries: 10
+
   start_dependencies:
     image: dadarek/wait-for-dependencies
     depends_on:
       case-processor:
+        condition: service_healthy
+      uac-qid:
         condition: service_healthy
