--- a/src/test/resources/docker-compose.yml
+++ b/src/test/resources/docker-compose.yml
@@ -22,6 +22,9 @@ services:
       - "35672:5672"
       - "46671:15671"
       - "46672:15672"
+    volumes:
+      - ./rabbitmq.config:/etc/rabbitmq/rabbitmq.config:ro
+      - ./definitions.json:/opt/definitions.json:ro
 
   case-processor:
     container_name: case-processor-it
