Add Prometheus metrics

--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,10 @@
       <artifactId>hibernate-types-5</artifactId>
       <version>2.4.4</version>
     </dependency>
+    <dependency>
+      <groupId>io.micrometer</groupId>
+      <artifactId>micrometer-registry-prometheus</artifactId>
+    </dependency>
 
     <!--    Test Dependencies below this point -->
     <dependency>
