--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,9 +38,16 @@ logging:
 
 management:
   endpoints:
-    enabled-by-default: true
+    enabled-by-default: false
+    web:
+      exposure:
+        include: info, health, prometheus
   endpoint:
     info:
+      enabled: true
+    health:
+      enabled: true
+    prometheus:
       enabled: true
 
 uacservice:
