--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -53,7 +53,7 @@ management:
       enabled: true
   metrics:
     tags:
-      application: ${spring.application.name}
+      application: "CaseAPI"
 
 uacservice:
   connection:
