--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,8 @@
     </dependency>
     <dependency>
       <groupId>io.micrometer</groupId>
-      <artifactId>micrometer-registry-prometheus</artifactId>
+      <artifactId>micrometer-registry-stackdriver</artifactId>
+      <version>1.3.9</version>
     </dependency>
 
     <!--    Test Dependencies below this point -->
