--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,17 +41,18 @@ management:
     enabled-by-default: false
     web:
       exposure:
-        include: info, health, prometheus
+        include: info, health
   endpoint:
     info:
       enabled: true
     health:
       enabled: true
-    prometheus:
-      enabled: true
   metrics:
-    tags:
-      application: Case API
+    export:
+      stackdriver:
+        project-id: dummy-project-id
+        enabled: false
+        step: 15s
 
 uacservice:
   connection:
