--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -48,6 +48,8 @@ management:
     health:
       enabled: true
   metrics:
+    tags:
+      application: Case API
     export:
       stackdriver:
         project-id: dummy-project-id
