Attempts to get stackdriver to behave itself

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -54,7 +54,7 @@ management:
       stackdriver:
         project-id: dummy-project-id
         enabled: false
-        step: 15s
+        step: PT1M
 
 uacservice:
   connection:
