--- a/src/test/resources/docker-compose.yml
+++ b/src/test/resources/docker-compose.yml
@@ -39,11 +39,13 @@ services:
       - QUEUECONFIG_UAC_QID_CREATED_QUEUE=dummy.uac-qid-created
       - JAVA_OPTS=-Xmx128m -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5121 -Dspring.profiles.active=dev
       - CASEREFGENERATORKEY=6+VLkvz5XYkF7vFLVX7FDnfxavQ7M+iY
+      - SPRING_CLOUD_GCP_PUBSUB_EMULATOR_HOST=dummy:0
+      - SPRING_CLOUD_GCP_PUBSUB_PROJECT_ID=dummy
     healthcheck:
       test: ["CMD", "cat", "/tmp/case-service-healthy"]
       interval: 30s
       timeout: 10s
-      retries: 10
+      retries: 20
     depends_on:
       postgres-database:
         condition: service_healthy
