Migrating away from guest account.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,8 +26,8 @@ spring:
           lob:
             non_contextual_creation: true
   rabbitmq:
-    username: guest
-    password: guest
+    username: rmquser
+    password: rmqp455w0rd
     host: localhost
     port: 6672
     virtualhost: /
