--- a/src/test/resources/docker-compose.yml
+++ b/src/test/resources/docker-compose.yml
@@ -14,7 +14,7 @@ services:
 
   rabbitmq:
     container_name: rabbitmq-case-api-it
-    image: rabbitmq:3.6.10-management
+    image: rabbitmq:3.8-management
     ports:
       - "34369:4369"
       - "55672:25672"
@@ -22,9 +22,13 @@ services:
       - "35672:5672"
       - "46671:15671"
       - "46672:15672"
+    environment:
+      - RABBITMQ_DEFAULT_USER=rmquser
+      - RABBITMQ_DEFAULT_PASS=rmqp455w0rd
+      - RABBITMQ_CONFIG_FILE=/etc/rabbitmq/rabbitmq.conf
     volumes:
-      - ./rabbitmq.config:/etc/rabbitmq/rabbitmq.config:ro
-      - ./definitions.json:/opt/definitions.json:ro
+      - ./definitions.json:/opt/definitions.json
+      - ./rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf
 
   case-processor:
     container_name: case-processor-case-api-it
