Add hostname to micrometer stackdriver metrics

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -50,6 +50,7 @@ management:
   metrics:
     tags:
       application: Case API
+      pod: ${HOSTNAME}
     export:
       stackdriver:
         project-id: dummy-project-id
